--- a/src/data/seeds/east-luterra.json
+++ b/src/data/seeds/east-luterra.json
@@ -4,7 +4,7 @@
         "label": "Luterra Castle",
         "seeds": 10,
         "type": "City",
-        "map": "brilliantRidge.png",
+        "map": "luterraCastle.png",
         "instructions": [
             {
                 "id": 1,
